--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,12 +7,24 @@ jobs:
     runs-on: ubuntu-latest
     name: Build
     steps:
-    - name: Checkout source code
-      uses: actions/checkout@v2
-    - name: Use docker action to build
-      uses: dchaves/arduino-cli-esp32@v1
+    - uses: actions/checkout@v2
+    - name: Cache pip
+      uses: actions/cache@v2
       with:
-        action: compile
-        sketch: gooseka
-        board: esp32:esp32:esp32doit-devkit-v1
-        libraries: ESP32Servo LoRa
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+    - name: Cache PlatformIO
+      uses: actions/cache@v2
+      with:
+        path: ~/.platformio
+        key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
+    - name: Set up Python
+      uses: actions/setup-python@v2
+    - name: Install PlatformIO
+      run: |
+        python -m pip install --upgrade pip
+        pip install --upgrade platformio
+    - name: Run PlatformIO
+      run: pio run
